--- a/app/src/main/res/layout/activity_personel__progress.xml
+++ b/app/src/main/res/layout/activity_personel__progress.xml
@@ -24,11 +24,53 @@
             android:textColor="#050505"
             android:textSize="15sp"
             android:textStyle="bold" />
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:text="En Son Durum :"
+            android:textColor="#050505"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/personel_current_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Yok"
+            android:layout_gravity="center"
+            android:background="@color/white"
+            android:textColor="#050505"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Talep Edilmiş İşgücü Desteği :"
+            android:textColor="#050505"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/personel_current_needManPower"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Yok"
+            android:layout_gravity="center"
+            android:textColor="#050505"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </LinearLayout>
         <TextView
             android:id="@+id/text1"
-            android:layout_width="281dp"
-            android:layout_height="26dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
             android:layout_marginLeft="36dp"
             android:layout_marginTop="30dp"
