--- a/app/src/main/res/layout/activity_personel_history_addlayout.xml
+++ b/app/src/main/res/layout/activity_personel_history_addlayout.xml
@@ -13,7 +13,7 @@
     <TextView
         android:id="@+id/HistoryText"
         android:layout_width="match_parent"
-        android:layout_height="37dp"
+        android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:textSize="20dp"
         android:layout_weight="1"
