--- a/app/src/main/res/layout/activity_personel_anasayfa.xml
+++ b/app/src/main/res/layout/activity_personel_anasayfa.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/personel_drawer_layout"
     tools:context=".Personel_Anasayfa">
 
 
@@ -31,7 +31,7 @@
         android:layout_gravity="start"
         android:background="@color/white">
         <include
-            layout="@layout/activitiy_nav_drawer"/>
+            layout="@layout/activity_personel_nav_drawer"/>
     </RelativeLayout>
 
 
