Creating a new disaster record has been added for authorized user #10

--- a/css/styles.css
+++ b/css/styles.css
@@ -92,4 +92,22 @@ body {
 
 .dataTables_empty {
     display: none;
-  }
+}
+
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:60px;
+	right:80px;
+	background-color:#0d6efd;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+	box-shadow: 1px 1px 2px #999;
+}
+
+.my-float{
+    margin-top: 5px;
+	line-height: inherit!important;
+}
