--- a/app/src/main/res/layout/activity_volunteer_camera_galery.xml
+++ b/app/src/main/res/layout/activity_volunteer_camera_galery.xml
@@ -23,7 +23,7 @@
         android:layout_width="105dp"
         android:layout_height="45dp"
         android:onClick="ClickCameraBtn"
-        android:text="Camera"
+        android:text="Kamera"
         app:backgroundTint="#352D20"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
         android:layout_width="107dp"
         android:layout_height="45dp"
         android:onClick="ClickGaleryBtn"
-        android:text="Galery"
+        android:text="Galeri"
         app:backgroundTint="#352D20"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,15 +45,4 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/uploadBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Resmi Yükle"
-        app:backgroundTint="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.396" />
 </androidx.constraintlayout.widget.ConstraintLayout>
