--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="colorbackground">#EBEBEB</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="griback">#BFBFBF</color>
 </resources>
