#16 update that allows the change of disaster information
add the function for update disaster page

--- a/app/src/main/res/layout/activity_disaster__details.xml
+++ b/app/src/main/res/layout/activity_disaster__details.xml
@@ -39,6 +39,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:text="Afet Bilgisini Güncelle"
+            android:onClick="ClickUpdateAfetBilgisi"
             android:textColor="@color/black"
             app:backgroundTint="#BFBFBF">
 
